Close #4. Add a help page (under construction)

--- a/core.html
+++ b/core.html
@@ -8,7 +8,7 @@
 		<link href="css/main.css" rel="stylesheet">
 	</head>
 	<body>
-		<h1>KEMU Emurator</h1>
+		<h1>KEMU Emulator</h1>
 		<div class="btn-group" role="group">
 			<button type="button" class="btn btn-default" onclick="buttonRunStop()">
 				<span class="glyphicon glyphicon-play" aria-hidden="true"></span> 実行/停止
@@ -100,7 +100,7 @@
 						<th>Addr</th>
 						<th>Phase</th>
 						<th>PC</th>
-						<th>FRAG</th>
+						<th>FLAG</th>
 						<th>ACC</th>
 						<th>IX</th>
 						<th>MAR</th>
