--- a/core.html
+++ b/core.html
@@ -60,7 +60,7 @@
 			<li role="presentation">
 				<a id="tab_trace" href="#content_trace"
 					aria-controls="content_trace" role="tab" data-toggle="tab">トレース</a>
-			</li>
+			</li>0
 			<li role="presentation">
 				<a id="tab_statistics" href="#content_statistics"
 					aria-controls="content_statistics" role="tab" data-toggle="tab">統計</a>
@@ -619,6 +619,7 @@
 					runningTimer = null;
 				} else {
 					KemuStatistics.start();
+					core.halted = false;
 					runningStart = +new Date();
 					var timerCount = 0, timerTime, lastUpdatedTime = runningStart;
 					runningTimer = setTimeout(function runningTimerCallback(){
